[package]
name = "naadandb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sqlparser = "0.43.1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.1"

[lib]
name = "libnaadandb"
path = "src/lib.rs"

[[bin]]
name = "naadandb"
path = "src/main.rs"
